--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,11 @@ services:
       - pg_data:/var/lib/postgresql/data/pgdata
     ports:
       - '5432:5432'
-
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     build: .
@@ -26,6 +30,9 @@ services:
     command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     ports:
       - '8000:8000'
+    depends_on:
+      db:
+        condition: service_healthy
 
   celery:
     build: .
